--- a/src/scenes/ourServices/ourServices.css
+++ b/src/scenes/ourServices/ourServices.css
@@ -1,5 +1,5 @@
 .our-services {
-  padding: 30px 50px 25px;
+  padding: 60px 50px 60px;
   text-align: center;
   align-items: center;
   height: auto;
