--- a/src/scenes/ourTechnology/ourTechnology.css
+++ b/src/scenes/ourTechnology/ourTechnology.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 20px 20px 40px;
+  padding: 30px 20px 30px;
   width: auto;
   height: auto;
   background-color: #1c1c1c;
@@ -63,6 +63,7 @@
 
 .technology-text td{
   background-color: rgba(240, 248, 255, 0) !important;
+  padding: 5px;
 }
 
 .our-technology-text tr {
