--- a/src/scenes/planPricing/planPricing.css
+++ b/src/scenes/planPricing/planPricing.css
@@ -1,6 +1,6 @@
 .plan-section {
     background-color: #1c1c1c;
-    padding: 1em 5em 1.5em;
+    padding: 70px 60px;
 }
 
 .plan-container {
